tests/error/modifier_errors/optional_as_found.err
Error: Unsupported (at $FILE:6:9)
  | 
4 | @guppy
5 | def test() -> None:
6 |     with power(1) as x:
  |          ^^^^^^^^^^^^^ `as` expression is not supported

Guppy compilation failed due to 1 previous error
